--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ astunparse==1.6.3
 async-timeout==4.0.2
 asyncio==3.4.3
 attrs==23.2.0
+babel==2.17.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
@@ -37,11 +38,13 @@ click==8.1.3
 clickclick==20.10.2
 colorama==0.4.6
 colorlog==4.8.0
+colorthief==0.2.1
 ConfigUpdater==3.2
 connexion==2.14.2
 contourpy==1.0.6
 cron-descriptor==1.4.3
 croniter==2.0.5
+cryptography==44.0.2
 cycler==0.11.0
 debugpy==1.6.3
 decorator==5.1.1
@@ -50,11 +53,13 @@ Deprecated==1.2.14
 dill==0.3.5.1
 dm-tree==0.1.8
 dnspython==2.2.1
+docutils==0.21.2
 email_validator==2.1.1
 entrypoints==0.4
 et-xmlfile==1.1.0
 executing==1.1.1
 fastjsonschema==2.16.2
+filelock==3.18.0
 Flask==2.2.3
 Flask-AppBuilder==4.4.1
 Flask-Babel==2.0.0
@@ -75,6 +80,7 @@ GitPython==3.1.43
 google-pasta==0.2.0
 google-re2==1.1.20240501
 googleapis-common-protos==1.63.0
+greenlet==3.1.1
 grpcio==1.67.1
 gunicorn==22.0.0
 h11==0.14.0
@@ -83,9 +89,13 @@ httpcore==1.0.5
 httpx==0.27.0
 huggingface-hub==0.21.4
 idna==3.4
+imbalanced-learn==0.13.0
 imblearn==0.0
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
+inflection==0.5.1
+intel-cmplr-lib-ur==2025.1.0
+intel-openmp==2025.1.0
 ipykernel==6.16.2
 ipython==8.5.0
 ipython-genutils==0.2.0
@@ -106,6 +116,7 @@ jupyterlab-widgets==3.0.3
 keras==3.6.0
 kiwisolver==1.4.4
 kneed==0.8.3
+lazy-object-proxy==1.10.0
 libclang==16.0.6
 limits==3.12.0
 linkify-it-py==2.0.3
@@ -123,7 +134,7 @@ mdit-py-plugins==0.4.1
 mdurl==0.1.2
 methodtools==0.4.7
 mistune==2.0.4
-mkl-service==2.4.1
+
 ml-dtypes==0.4.1
 more-itertools==10.2.0
 mpmath==1.3.0
@@ -135,6 +146,7 @@ nbclient==0.7.0
 nbconvert==7.2.2
 nbformat==5.7.0
 nest-asyncio==1.5.6
+networkx==3.4.2
 notebook==6.5.1
 notebook_shim==0.2.0
 numpy==2.0.2
@@ -156,13 +168,17 @@ packaging==24.1
 pandas==2.2.3
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.12.1
 pendulum==3.0.0
 pickleshare==0.7.5
+pillow==10.4.0
 plotly==5.15.0
+pluggy==1.5.0
 prison==0.2.1
 prometheus-client==0.15.0
 prompt-toolkit==3.0.31
 protobuf==4.25.3
+psutil==7.0.0
 pure-eval==0.2.2
 py-cpuinfo==9.0.0
 pyarrow==18.0.0
@@ -177,14 +193,19 @@ python-daemon==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-nvd3==0.16.0
+python-slugify==8.0.4
 pytube==15.0.0
 pytz==2022.7
 pywin32==304
+pywinpty==2.0.15
+PyYAML==6.0.2
 pyzmq==24.0.1
 qtconsole==5.3.2
 QtPy==2.2.1
 referencing==0.35.1
 regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rich==13.7.0
 rich-argparse==1.4.0
@@ -197,15 +218,20 @@ Send2Trash==1.8.0
 sentence-transformers==2.5.1
 setproctitle==1.3.3
 six==1.16.0
+sklearn-compat==0.1.3
 smmap==5.0.1
 sniffio==1.3.0
 soupsieve==2.3.2.post1
+SQLAlchemy==1.4.54
 SQLAlchemy-JSONField==1.0.2
 SQLAlchemy-Utils==0.41.2
 sqlparse==0.5.0
 stack-data==0.5.1
 streamlit==1.39.0
 sympy==1.13.1
+tabulate==0.9.0
+tbb==2022.1.0
+tcmlib==1.3.0
 tenacity==9.0.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
@@ -214,6 +240,7 @@ tensorflow-io-gcs-filesystem==0.31.0
 tensorflow_intel==2.18.0
 termcolor==2.4.0
 terminado==0.17.0
+text-unidecode==1.3
 threadpoolctl==3.1.0
 time-machine==2.14.1
 tinycss2==1.2.1
@@ -225,16 +252,20 @@ torchvision==0.20.1
 tornado==6.2
 tqdm==4.66.6
 traitlets==5.5.0
+transformers==4.39.3
 twilio==8.0.0
+typing_extensions==4.13.1
 tzdata==2024.1
 uc-micro-py==1.0.3
 ultralytics==8.3.27
 ultralytics-thop==2.0.10
+umf==0.10.0
 unicodecsv==0.14.1
 universal_pathlib==0.2.2
 urllib3==1.26.15
 watchdog==5.0.3
 wcwidth==0.2.5
+webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.4.1
 Werkzeug==2.2.3
@@ -244,8 +275,4 @@ wrapt==1.16.0
 WTForms==3.1.2
 xgboost==1.6.2
 yarl==1.8.2
-
-
-
-colorthief>=0.2.1
-webcolors>=1.11.1
+zipp==3.21.0
