--- a/requirements.txt
+++ b/requirements.txt
@@ -1,269 +1,8 @@
-absl-py==2.1.0
-aiohttp==3.9.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-alembic==1.13.1
-altair==5.4.1
-anyio==3.6.2
-
-apispec==6.6.1
-argcomplete==3.3.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asgiref==3.8.1
-asttokens==2.0.8
-astunparse==1.6.3
-async-timeout==4.0.2
-asyncio==3.4.3
-attrs==23.2.0
-babel==2.17.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.8.2
-cachelib==0.9.0
-cachetools==5.5.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-clickclick==20.10.2
-colorama==0.4.6
-colorlog==4.8.0
-colorthief==0.2.1
-ConfigUpdater==3.2
-connexion==2.14.2
-contourpy==1.0.6
-cron-descriptor==1.4.3
-croniter==2.0.5
-cryptography==44.0.2
-cycler==0.11.0
-debugpy==1.6.3
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.5.1
-dm-tree==0.1.8
-dnspython==2.2.1
-docutils==0.21.2
-email_validator==2.1.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==1.1.1
-fastjsonschema==2.16.2
-filelock==3.18.0
-Flask==2.2.3
-Flask-AppBuilder==4.4.1
-Flask-Babel==2.0.0
-Flask-Caching==2.3.0
-Flask-JWT-Extended==4.6.0
-Flask-Limiter==3.6.0
-Flask-Login==0.6.3
-Flask-Session==0.5.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.2.1
-flatbuffers==24.3.25
-fonttools==4.38.0
-frozenlist==1.3.3
-fsspec==2024.3.0
-gast==0.5.4
-gitdb==4.0.11
-GitPython==3.1.43
-google-pasta==0.2.0
-google-re2==1.1.20240501
-googleapis-common-protos==1.63.0
-greenlet==3.1.1
-grpcio==1.67.1
-gunicorn==22.0.0
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.21.4
-idna==3.4
-imbalanced-learn==0.13.0
-imblearn==0.0
-importlib-metadata==7.0.0
-importlib_resources==6.4.0
-inflection==0.5.1
-intel-cmplr-lib-ur==2025.1.0
-intel-openmp==2025.1.0
-ipykernel==6.16.2
-ipython==8.5.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.2
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.4.4
-jupyter-server==1.21.0
-jupyter_client==7.4.4
-jupyter_core==4.11.2
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.3
-keras==3.6.0
-kiwisolver==1.4.4
-kneed==0.8.3
-lazy-object-proxy==1.10.0
-libclang==16.0.6
-limits==3.12.0
-linkify-it-py==2.0.3
-lockfile==0.12.2
-Mako==1.3.5
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.1
-marshmallow==3.21.2
-marshmallow-oneofschema==3.1.1
-marshmallow-sqlalchemy==0.28.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.6
-mdit-py-plugins==0.4.1
-mdurl==0.1.2
-methodtools==0.4.7
-mistune==2.0.4
-
-ml-dtypes==0.4.1
-more-itertools==10.2.0
-mpmath==1.3.0
-multidict==6.0.4
-namex==0.0.7
-narwhals==1.13.2
-nbclassic==0.4.5
-nbclient==0.7.0
-nbconvert==7.2.2
-nbformat==5.7.0
-nest-asyncio==1.5.6
-networkx==3.4.2
-notebook==6.5.1
-notebook_shim==0.2.0
-numpy==2.0.2
-opencv-python==4.10.0.84
-opencv-python-headless==4.10.0.84
-openpyxl==3.1.2
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-exporter-otlp-proto-http==1.24.0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-opt-einsum==3.3.0
-optree==0.13.1
-ordered-set==4.1.0
-packaging==24.1
-pandas==2.2.3
-pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.12.1
-pendulum==3.0.0
-pickleshare==0.7.5
-pillow==10.4.0
-plotly==5.15.0
-pluggy==1.5.0
-prison==0.2.1
-prometheus-client==0.15.0
-prompt-toolkit==3.0.31
-protobuf==4.25.3
-psutil==7.0.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyarrow==18.0.0
-pycparser==2.21
-pydeck==0.9.1
-Pygments==2.13.0
-PyJWT==2.6.0
-pymongo==4.3.3
-pyparsing==3.0.9
-pyrsistent==0.18.1
-python-daemon==3.0.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-nvd3==0.16.0
-python-slugify==8.0.4
-pytube==15.0.0
-pytz==2022.7
-
-PyYAML==6.0.2
-pyzmq==24.0.1
-qtconsole==5.3.2
-QtPy==2.2.1
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rich==13.7.0
-rich-argparse==1.4.0
-rpds-py==0.18.1
-safetensors==0.4.2
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.12.2
-Send2Trash==1.8.0
-sentence-transformers==2.5.1
-setproctitle==1.3.3
-six==1.16.0
-sklearn-compat==0.1.3
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-SQLAlchemy==1.4.54
-SQLAlchemy-JSONField==1.0.2
-SQLAlchemy-Utils==0.41.2
-sqlparse==0.5.0
-stack-data==0.5.1
-streamlit==1.39.0
-sympy==1.13.1
-tabulate==0.9.0
-tbb==2022.1.0
-tcmlib==1.3.0
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.4.0
-terminado==0.17.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
-time-machine==2.14.1
-tinycss2==1.2.1
-tokenizers==0.15.2
-toml==0.10.2
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
-tornado==6.2
-tqdm==4.66.6
-traitlets==5.5.0
-transformers==4.39.3
-twilio==8.0.0
-typing_extensions==4.13.1
-tzdata==2024.1
-uc-micro-py==1.0.3
-ultralytics==8.3.27
-ultralytics-thop==2.0.10
-umf==0.10.0
-unicodecsv==0.14.1
-universal_pathlib==0.2.2
-urllib3==1.26.15
-watchdog==5.0.3
-wcwidth==0.2.5
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.4.1
-Werkzeug==2.2.3
-widgetsnbextension==4.0.3
-wirerope==0.4.7
-wrapt==1.16.0
-WTForms==3.1.2
-xgboost==1.6.2
-yarl==1.8.2
-zipp==3.21.0
+streamlit
+numpy
+Pillow
+tensorflow
+tqdm
+pandas
+scikit-learn  # common with ML workflows
+opencv-python 
