--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,137 @@
-streamlit
-numpy
-Pillow
-tensorflow
-tqdm
-pandas
-scikit-learn  # common with ML workflows
-opencv-python 
+
+bleach==5.0.1
+blinker==1.8.2
+cachelib==0.9.0
+cachetools==5.5.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+clickclick==20.10.2
+colorama==0.4.6
+colorlog==4.8.0
+colorthief==0.2.1
+ConfigUpdater==3.2
+connexion==2.14.2
+contourpy==1.0.6
+cron-descriptor==1.4.3
+croniter==2.0.5
+cryptography==44.0.2
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.5.1
+dm-tree==0.1.8
+dnspython==2.2.1
+docutils==0.21.2
+email_validator==2.1.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==1.1.1
+fastjsonschema==2.16.2
+filelock==3.18.0
+
+
+gunicorn==22.0.0
+h11==0.14.0
+h5py==3.12.1
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.21.4
+idna==3.4
+imbalanced-learn==0.13.0
+imblearn==0.0
+
+keras==3.6.0
+kiwisolver==1.4.4
+kneed==0.8.3
+lazy-object-proxy==1.10.0
+libclang==16.0.6
+limits==3.12.0
+linkify-it-py==2.0.3
+lockfile==0.12.2
+Mako==1.3.5
+
+numpy==2.0.2
+opencv-python==4.10.0.84
+opencv-python-headless==4.10.0.84
+openpyxl==3.1.2
+
+opt-einsum==3.3.0
+optree==0.13.1
+ordered-set==4.1.0
+packaging==24.1
+pandas==2.2.3
+pandocfilters==1.5.0
+parso==0.8.3
+pathspec==0.12.1
+pendulum==3.0.0
+pickleshare==0.7.5
+pillow==10.4.0
+plotly==5.15.0
+pluggy==1.5.0
+prison==0.2.1
+prometheus-client==0.15.0
+prompt-toolkit==3.0.31
+protobuf==4.25.3
+psutil==7.0.0
+pure-eval==0.2.2
+py-cpuinfo==9.0.0
+pyarrow==18.0.0
+pycparser==2.21
+pydeck==0.9.1
+Pygments==2.13.0
+PyJWT==2.6.0
+
+pyzmq==24.0.1
+qtconsole==5.3.2
+QtPy==2.2.1
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rich==13.7.0
+rich-argparse==1.4.0
+rpds-py==0.18.1
+safetensors==0.4.2
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.12.2
+Send2Trash==1.8.0
+sentence-transformers==2.5.1
+setproctitle==1.3.3
+six==1.16.0
+sklearn-compat==0.1.3
+smmap==5.0.1
+sniffio==1.3.0
+
+streamlit==1.39.0
+sympy==1.13.1
+tabulate==0.9.0
+tbb==2022.1.0
+tcmlib==1.3.0
+tenacity==9.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+
+tinycss2==1.2.1
+tokenizers==0.15.2
+toml==0.10.2
+torch==2.5.1
+
+tqdm==4.66.6
+traitlets==5.5.0
+transformers==4.39.3
+twilio==8.0.0
+typing_extensions==4.13.1
+tzdata==2024.1
+uc-micro-py==1.0.3
 ultralytics==8.3.27
+
+xgboost==1.6.2
+yarl==1.8.2
+zipp==3.21.0
