--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-
 colorama==0.4.6
 colorlog==4.8.0
-
 cron-descriptor==1.4.3
 croniter==2.0.5
 cycler==0.11.0
@@ -12,14 +10,7 @@ Deprecated==1.2.14
 dill==0.3.5.1
 dm-tree==0.1.8
 dnspython==2.2.1
-
-
-
 frozenlist==1.3.3
-
-
-
-
 imblearn==0.0
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
@@ -29,16 +20,10 @@ ipython-genutils==0.2.0
 ipywidgets==8.0.2
 itsdangerous==2.1.2
 jedi==0.18.1
-
-
 keras==3.6.0
-
 kneed==0.8.3
-
-
 matplotlib==3.9.2
 matplotlib-inline==0.1.6
-
 ml-dtypes==0.4.1
 more-itertools==10.2.0
 mpmath==1.3.0
@@ -47,7 +32,6 @@ numpy==2.0.2
 opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
 openpyxl==3.1.2
-
 packaging==24.1
 pandas==2.2.3
 pandocfilters==1.5.0
@@ -57,7 +41,6 @@ python-daemon==3.0.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-nvd3==0.16.0
-
 safetensors==0.4.2
 scikit-learn==1.5.2
 scipy==1.14.1
@@ -66,8 +49,6 @@ streamlit==1.39.0
 tensorboard==2.18.0
 tensorboard-data-server==0.7.2
 tensorflow==2.18.0
-
-
 tinycss2==1.2.1
 tokenizers==0.15.2
 torch==2.5.1
@@ -77,8 +58,6 @@ tqdm==4.66.6
 tzdata==2024.1
 ultralytics==8.3.27
 ultralytics-thop==2.0.10
-
-
-
 colorthief>=0.2.1
 webcolors>=1.11.1
+toml==0.10.2
