--- a/requirements.txt
+++ b/requirements.txt
@@ -61,5 +61,21 @@ ultralytics-thop==2.0.10
 colorthief>=0.2.1
 webcolors>=1.11.1
 toml==0.10.2
-
+py-cpuinfo==9.0.0
+pyarrow==18.0.0
+pycparser==2.21
+pydeck==0.9.1
+Pygments==2.13.0
+PyJWT==2.6.0
+pymongo==4.3.3
+pyparsing==3.0.9
+pyrsistent==0.18.1
+python-daemon==3.0.1
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-nvd3==0.16.0
+pytube==15.0.0
+pytz==2022.7
+pywin32==304
+pyzmq==24.0.1
 
